--- a/css/tao.css
+++ b/css/tao.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 
 body,#outter_div {
-	margin-top: 0px;
+	margin: 0px;
 	padding: 0px
 }
 #outter_div{
@@ -13,7 +13,7 @@ body,#outter_div {
 
 a[id ^="nav_"] {
 	text-decoration: none;
-	font-size: 10px;
+	font-size: 12px;
 	color:#6c6c6c;
 	display:block;
 	float:left;
@@ -56,11 +56,12 @@ a:hover {
 }
 .down-arrow{
 	background: url(../image/down-arrow.gif) no-repeat center;
-	width: 10px;
-	height: 10px;
+	width: 5px;
+	height: 4px;
 	display: block;
 	float:right;
-	margin-right:5px;
+	margin-right:8px;
+	margin-top:6px;
 }
 #nav_cart-ico{
 	background: url(../image/cart.gif) no-repeat center;
@@ -151,6 +152,7 @@ div[id^="nav_"]{
 	padding-left:4px;
 	border-top:none;
 	margin-top:25px;
+	width:80px;
 	background-color:white;
 }
 #folderchil_ul{
